--- a/optimusation.ipynb
+++ b/optimusation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a916a9b",
+   "id": "d9feaf52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7eb63c80",
+   "id": "29e07f2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3a00ada8",
+   "id": "87e6e1f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "09cf16c8",
+   "id": "ce928506",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "b6c99efb",
+   "id": "9d455911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 161,
    "id": "fc826dab",
    "metadata": {
     "scrolled": true
@@ -390,13 +390,15 @@
     "\n",
     "\n",
     "bounds = [[0, 1], [0, 1],[0, 1], [0, 1],[0, 1], [0, 1],[0, 1], [0, 1],[0, 1], [0, 1]]\n",
-    "\n",
+    "n=0\n",
+    "m=0\n",
     "def func(p):\n",
     "    w1,w2,w3,w4,w5,w6,w7,w8,w9,w10 = p\n",
     "    mon=100000\n",
-    "    td=0.2\n",
+    "    td=0.15\n",
     "    amount=0\n",
-    "    for i in range(0,len(dfa1)):\n",
+    "    global n,m\n",
+    "    for i in range(0,len(dfo)):\n",
     "        r = ((w1*sl1[i]+w2*sl2[i]+w3*sl3[i]+w4*sl4[i]+w5*sl5[i]+w6*sl6[i]+w7*sl7[i]+w8*sl8[i]+w9*sl9[i]+w10*sl10[i])/(w1+w2+w3+w4+w5+w6+w7+w8+w9+w10))\n",
     "        if r>td:\n",
     "            sumall=mon//dfo['Close'][i]\n",
@@ -407,13 +409,14 @@
     "            amount=0\n",
     "        else:\n",
     "            pass\n",
-    "    ret=mon+amount*df_amzn['Close'][len(dfa1)-1]\n",
+    "        #print(r)\n",
+    "    ret=mon+amount*dfo['Close'][len(dfo)-1]\n",
     "    return -ret"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 162,
    "id": "686bb12e",
    "metadata": {},
    "outputs": [],
@@ -425,12 +428,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "id": "d71ddb79",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           constr: [array([2.22044605e-16])]\n",
+      " constr_violation: 2.220446049250313e-16\n",
+      "              fun: -117901.99955177309\n",
+      "              jac: [array([[1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]]), array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])]\n",
+      "            maxcv: 2.220446049250313e-16\n",
+      "          message: 'The solution does not satisfy the constraints, MAXCV = '\n",
+      "             nfev: 572\n",
+      "              nit: 1000\n",
+      "          success: False\n",
+      "                x: array([0.08658892, 0.08380577, 0.0851376 , 0.09067812, 0.0893091 ,\n",
+      "       0.15359032, 0.08976622, 0.09204401, 0.1404541 , 0.08862584])\n"
+     ]
+    }
+   ],
    "source": [
     "fobj()"
    ]
@@ -442,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.DataFrame({'GOOG' : [0.03322728, 0.17789633, 0.20643122, 0.04901172, 0.02944978,0.06280884, 0.01737008, 0.26118814, 0.03622071 , 0.12639588],\n",
+    "df=pd.DataFrame({'GOOG' : [0.06995807, 0.02484653, 0.03726935, 0.02151851, 0.06466854,0.05203102, 0.03699746, 0.06970579, 0.33046532, 0.2925394,-187870.76985931396],\n",
     "               'AMZN' :[0.05382357, 0.11597249, 0.16117411, 0.08293008, 0.06021601,0.14365769, 0.13546286, 0.07086823, 0.09617899, 0.07971599,-205290.52818679815],\n",
     "               'COP' : [0.04707394, 0.04970202, 0.03905992, 0.03197686, 0.09107059,0.10481044, 0.07141184, 0.03220175, 0.38665312, 0.14603952],\n",
     "               'PXD' : [0.27755385, 0.11776644, 0.10175624, 0.03502675, 0.05700024,0.08900609, 0.02204514, 0.23652257, 0.03600717, 0.0273155],\n",
@@ -454,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ec51e21",
+   "id": "f2d2db04",
    "metadata": {},
    "outputs": [],
    "source": []
