--- a/def_indi.ipynb
+++ b/def_indi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "ae698cf4-f22f-4659-a54f-4f98dd999ff0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "    import numpy as np\n",
     "    import talib as ta\n",
     "    import pandas as pd\n",
-    "    global df_signal\n",
+    "    global df_signal,dfa1\n",
     "    \n",
     "    Sdate =\"%s-%s-%s\" % (Syear,Smonth,Sday)\n",
     "    Edate =\"%s-%s-%s\" % (Eyear,Emonth,Eday)\n",
@@ -528,16 +528,39 @@
     "        else:\n",
     "            color.append(0)\n",
     "    cdc_signal=color\n",
+    "    \n",
+    "    SAR=ta.SAR(dfa1_all['High'], dfa1_all['Low'], acceleration=0.2, maximum=0.2)\n",
+    "    SAR=SAR.loc[Sdate:Edate]\n",
+    "    SAR=SAR.array\n",
+    "    dfa1['SAR']=SAR\n",
+    "    signal= 0\n",
+    "    sar_signal = []\n",
+    "    for i in range(len(dfa1)):\n",
+    "        if dfa1['Close'][i] > dfa1['SAR'][i] :\n",
+    "            if signal != 1:\n",
+    "                signal = 1\n",
+    "                sar_signal.append(signal)\n",
+    "            else:\n",
+    "                sar_signal.append(0)\n",
+    "        elif dfa1['Close'][i] < dfa1['SAR'][i]:\n",
+    "            if signal != -1:\n",
+    "                signal = -1\n",
+    "                sar_signal.append(signal)\n",
+    "            else:\n",
+    "                sar_signal.append(0)\n",
+    "        else:\n",
+    "            sar_signal.append(0)\n",
+    "            \n",
     "    signal={'ma30_50_signal':ma30_50_signal,'ma30_200_signal':ma30_200_signal,'ma50_200_signal':ma50_200_signal,\n",
     "            'obv_signal':obv_signal,'macd_signal':macd_signal,'adx_signal':adx_signal,'stoch_signal':stoch_signal,\n",
     "            'roc_signal':roc_signal,'rsi_signal':rsi_signal,'cci_signal':cci_signal,'atr_signal':atr_signal,\n",
-    "            'wpr_signal':wpr_signal,'bb_signal':bb_signal,'cdc_signal':cdc_signal}\n",
+    "            'wpr_signal':wpr_signal,'bb_signal':bb_signal,'cdc_signal':cdc_signal,'sar_signal':sar_signal}\n",
     "    df_signal=pd.DataFrame(signal)     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "e475ebe9-51ea-429a-a841-2dd2d21eae4d",
    "metadata": {},
    "outputs": [],
@@ -547,7 +570,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
+   "id": "8c46df19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ma30_50_signal</th>\n",
+       "      <th>ma30_200_signal</th>\n",
+       "      <th>ma50_200_signal</th>\n",
+       "      <th>obv_signal</th>\n",
+       "      <th>macd_signal</th>\n",
+       "      <th>adx_signal</th>\n",
+       "      <th>stoch_signal</th>\n",
+       "      <th>roc_signal</th>\n",
+       "      <th>rsi_signal</th>\n",
+       "      <th>cci_signal</th>\n",
+       "      <th>atr_signal</th>\n",
+       "      <th>wpr_signal</th>\n",
+       "      <th>bb_signal</th>\n",
+       "      <th>cdc_signal</th>\n",
+       "      <th>sar_signal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>750</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>751</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>753</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>754</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>755 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ma30_50_signal  ma30_200_signal  ma50_200_signal  obv_signal  \\\n",
+       "0                -1               -1               -1           1   \n",
+       "1                 0                0                0          -1   \n",
+       "2                 0                0                0           0   \n",
+       "3                 0                0                0           0   \n",
+       "4                 0                0                0           0   \n",
+       "..              ...              ...              ...         ...   \n",
+       "750               0                0                0           0   \n",
+       "751               0                0                0           0   \n",
+       "752               0                0                0           0   \n",
+       "753               0                0                0          -1   \n",
+       "754               0                0                0           0   \n",
+       "\n",
+       "     macd_signal  adx_signal  stoch_signal  roc_signal  rsi_signal  \\\n",
+       "0              0           0             1           1           0   \n",
+       "1              0           0             0           0           0   \n",
+       "2              0           0             0          -1           0   \n",
+       "3              0          -1             0           0           0   \n",
+       "4              0           0             0           0           0   \n",
+       "..           ...         ...           ...         ...         ...   \n",
+       "750            0           0             1           0           0   \n",
+       "751            0           0             0           0           0   \n",
+       "752           -1           0             0           0           0   \n",
+       "753            0           0             0           0           0   \n",
+       "754            0           0             0          -1           0   \n",
+       "\n",
+       "     cci_signal  atr_signal  wpr_signal  bb_signal  cdc_signal  sar_signal  \n",
+       "0             0          -1           0          0         0.5          -1  \n",
+       "1             0           0           0          0        -1.0           0  \n",
+       "2             0           0           0          0        -1.0           0  \n",
+       "3             1           0           1          0        -1.0           0  \n",
+       "4             0           0           0          0        -1.0           0  \n",
+       "..          ...         ...         ...        ...         ...         ...  \n",
+       "750           0           0           0          0         1.0          -1  \n",
+       "751           0           0           0          0         1.0           0  \n",
+       "752           0           0           0          0         1.0           0  \n",
+       "753           0           0           0          0        -0.5           0  \n",
+       "754           0           0           0          0        -0.5           0  \n",
+       "\n",
+       "[755 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "d5a6fec3-2d0f-4b1f-b3a5-9745eaa91494",
    "metadata": {},
    "outputs": [],
@@ -557,8 +880,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b3f1181a-1544-4c95-b30d-2b04d779e91b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 0    616\n",
+       "-1     70\n",
+       " 1     69\n",
+       "Name: sar_signal, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_signal['sar_signal'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0827b65f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import talib as ta\n",
+    "import datetime\n",
+    "import pandas_datareader.data as web\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import talib as ta\n",
+    "import pandas as pd\n",
+    "start=datetime.datetime(2014,1,2)\n",
+    "end=datetime.datetime(2017,12,31)\n",
+    "Stockdata=web.DataReader(\"GOOG\",'yahoo',start,end)\n",
+    "dfa1_all=Stockdata\n",
+    "SAR=ta.SAR(dfa1_all['High'], dfa1_all['Low'], acceleration=0.2, maximum=0.2)\n",
+    "dfa1_all['SAR']=SAR\n",
+    "signal= 0\n",
+    "sar_signal = []\n",
+    "for i in range(len(dfa1_all)):\n",
+    "    if dfa1_all['Close'][i] > dfa1_all['SAR'][i] and dfa1_all['Close'][i-1] < dfa1_all['SAR'][i-1] :\n",
+    "        if signal != 1:\n",
+    "            signal = 1\n",
+    "            sar_signal.append(signal)\n",
+    "        else:\n",
+    "            sar_signal.append(0)\n",
+    "    elif dfa1_all['Close'][i] < dfa1_all['SAR'][i] and dfa1_all['Close'][i-1] > dfa1_all['SAR'][i-1]:\n",
+    "        if signal != -1:\n",
+    "            signal = -1\n",
+    "            sar_signal.append(signal)\n",
+    "        else:\n",
+    "            sar_signal.append(0)\n",
+    "    else:\n",
+    "        sar_signal.append(0)\n",
+    "dfa1_all['sar']=sar_signal\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fda90a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfa1_all.to_csv(\"sarw.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1bde0742",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 0    821\n",
+       " 1     93\n",
+       "-1     93\n",
+       "Name: sar, dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfa1_all['sar'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d8d93e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import talib as ta\n",
+    "import datetime\n",
+    "import pandas_datareader.data as web\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import talib as ta\n",
+    "import pandas as pd\n",
+    "start=datetime.datetime(2014,1,2)\n",
+    "end=datetime.datetime(2017,12,31)\n",
+    "Stockdata=web.DataReader(\"GOOG\",'yahoo',start,end)\n",
+    "dfa1_all=Stockdata\n",
+    "SAR=ta.SAR(dfa1_all['High'], dfa1_all['Low'], acceleration=0.2, maximum=0.2)\n",
+    "dfa1_all['SAR']=SAR\n",
+    "signal= 0\n",
+    "sar_signal = []\n",
+    "for i in range(len(dfa1_all)):\n",
+    "    if dfa1_all['Close'][i] > dfa1_all['SAR'][i]:\n",
+    "        if signal != 1:\n",
+    "            signal = 1\n",
+    "            sar_signal.append(signal)\n",
+    "        else:\n",
+    "            sar_signal.append(0)\n",
+    "    elif dfa1_all['Close'][i] < dfa1_all['SAR'][i]:\n",
+    "        if signal != -1:\n",
+    "            signal = -1\n",
+    "            sar_signal.append(signal)\n",
+    "        else:\n",
+    "            sar_signal.append(0)\n",
+    "    else:\n",
+    "        sar_signal.append(0)\n",
+    "dfa1_all['sar']=sar_signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dafb338e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -581,6 +1042,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
