--- a/create_signal_new2 (1).ipynb
+++ b/create_signal_new2 (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "910fadca-6518-4bbe-bda1-d755ba5099af",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4820a73a-af5d-403c-9a82-63cde4230b6c",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 24,
    "id": "ae698cf4-f22f-4659-a54f-4f98dd999ff0",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
     "    import pandas as pd\n",
     "    import yfinance as yf\n",
     "    from collections import deque\n",
-    "    global df_signal,data_macd,dfa1,renko_signal,obv,dfa1_all,Sdate,Edate,stoch_adx_signal,ADX\n",
+    "    global df_signal,data_macd,dfa1,renko_signal,obv,dfa1_all,Sdate,Edate,stoch_adx_signal,ADX,atr_signal\n",
     "\t#preprocess data\n",
     "    Sdate =\"%s-%s-%s\" % (Syear,Smonth,Sday)\n",
     "    Edate =\"%s-%s-%s\" % (Eyear,Emonth,Eday)\n",
@@ -167,6 +167,7 @@
     "    ticker = Name\n",
     "    yfObj = yf.Ticker(ticker)\n",
     "    dt = yfObj.history(start=Sdate, end=Edate)[['High', 'Low']].round(2)\n",
+    "    dt=dt.loc[Sdate:Edate]\n",
     "    dt.reset_index(inplace=True)\n",
     "    indic = PSAR()\n",
     "    dt['PSAR'] = dt.apply(lambda x: indic.calcPSAR(x['High'], x['Low']), axis=1)\n",
@@ -183,7 +184,7 @@
     "                psar_signal[idx]=-1\n",
     "            else:\n",
     "                psar_signal[idx]=0\n",
-    "            \n",
+    "    \n",
     "    MA30=ta.MA(dfa1_all['Close'], timeperiod=30, matype=0)\n",
     "    MA30=MA30.loc[Sdate:Edate]\n",
     "    MA30=MA30.array\n",
@@ -913,6 +914,22 @@
     "            bb_rsi_signal.append(-1)\n",
     "        else:\n",
     "            bb_rsi_signal.append(0)\n",
+    "    psar_wpr_signal=[]\n",
+    "    for i in range(len(data)):\n",
+    "        if (psar_signal[i]==1 and wpr_signal[i]!=1):\n",
+    "            psar_wpr_signal.append(1)\n",
+    "       \telif (psar_signal[i]==-1 and wpr_signal[i]!=-1):\n",
+    "            psar_wpr_signal.append(-1)\n",
+    "        else:\n",
+    "            psar_wpr_signal.append(0)\n",
+    "    cdc_atr_signal=[]\n",
+    "    for i in range(len(data)):\n",
+    "        if (cdc_signal[i]==1 and atr_signal[i]==1):\n",
+    "            cdc_atr_signal.append(1)\n",
+    "       \telif (cdc_signal[i]==-1 and atr_signal[i]==1):\n",
+    "            cdc_atr_signal.append(-1)\n",
+    "        else:\n",
+    "            cdc_atr_signal.append(0)\n",
     "    signal={'adx_signal':adx_signal,'macd_signal':macd_signal,'ma30_200_signal':ma30_200_signal,'ma50_200_signal':ma50_200_signal,\n",
     "            'ma30_50_signal':ma30_50_signal,'cdc_signal':cdc_signal,'sar_signal':sar_signal,\n",
     "            'roc_signal':roc_signal,'obv_signal':obv_signal,'rsi_signal':rsi_signal,\n",
@@ -923,7 +940,7 @@
     "            'renko_signal':renko_signal,'renko_macd_signal':renko_macd_signal,\n",
     "            'obv_renko_signal':obv_renko_signal,'ma50_100_signal':ma50_100_signal,\n",
     "            'obv_macd_signal':obv_macd_signal,'sma89_signal':sma89_signal,\n",
-    "            'ma30_100_signal':ma30_100_signal,'stoch_adx_signal':stoch_adx_signal,'bb_rsi_signal':bb_rsi_signal,\n",
+    "            'ma30_100_signal':ma30_100_signal,'stoch_adx_signal':stoch_adx_signal,'bb_rsi_signal':bb_rsi_signal,'psar_wpr_signal':psar_wpr_signal,'cdc_atr_signal':cdc_atr_signal,\n",
     "            'close_price':dfa1['Close']\n",
     "           ,'adj_close_price':dfa1['Adj Close']}\n",
     "    \n",
@@ -932,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "id": "10058b1e-da51-45ad-81d4-1422f677190f",
    "metadata": {},
    "outputs": [
@@ -989,17 +1006,19 @@
     "for i,value in enumerate(us_stock_list):\n",
     "    ticker_list.append(us_stock_list[i])\n",
     "for i in range(len(us_stock_list)):\n",
-    "    findindi(ticker_list[i],us_stock_list[i],2021,1,2,2022,12,31)\n",
+    "    findindi(ticker_list[i],us_stock_list[i],2022,1,2,2022,12,31)\n",
+    "    globals()['df_of_'+us_stock_list[i]+'_signal_train'].to_csv(us_stock_list[i]+'_1_year_testing_signal.csv')\n",
     "thai_stock_list=['CPALL','MINT','HANA', 'BTS','BDMS', 'FORTH','JASIF', 'SCC','PTT','KBANK']\n",
-    "for i,value in enumerate(thai_stock_list):\n",
-    "    ticker_list.append(thai_stock_list[i]+'.BK')\n",
     "for i in range(len(thai_stock_list)):\n",
-    "    findindi(ticker_list[i],thai_stock_list[i],2021,1,2,2022,12,31)"
+    "    ticker_list.append(thai_stock_list[i]+'.BK')\n",
+    "for i,value in enumerate(thai_stock_list):\n",
+    "    findindi(ticker_list[i],thai_stock_list[i],2022,1,2,2022,12,31)\n",
+    "    globals()['df_of_'+thai_stock_list[i]+'_signal_train'].to_csv(thai_stock_list[i]+'_1_year_testing_signal.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "5bb95bc4-a2f8-473b-97cc-2c97c178c99d",
    "metadata": {},
    "outputs": [],
@@ -1040,12 +1059,14 @@
     "    globals()['sl26'+all_stock_list[i]]=dfo['sma89_signal']\n",
     "    globals()['sl27'+all_stock_list[i]]=dfo['ma30_100_signal']\n",
     "    globals()['sl28'+all_stock_list[i]]=dfo['stoch_adx_signal']\n",
-    "    globals()['sl29'+all_stock_list[i]]=dfo['bb_rsi_signal']"
+    "    globals()['sl29'+all_stock_list[i]]=dfo['bb_rsi_signal']\n",
+    "    globals()['sl30'+all_stock_list[i]]=dfo['psar_wpr_signal']\n",
+    "    globals()['sl31'+all_stock_list[i]]=dfo['cdc_atr_signal']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "5abd204d-2e52-44a8-b719-ea5ccdf91204",
    "metadata": {},
    "outputs": [],
@@ -1054,10 +1075,10 @@
     "    globals()['return_of_'+all_stock_list[j]+'_in_each_signal']=[]\n",
     "def simulate_one_signal(all_ticker_list):\n",
     "    global ret_l\n",
-    "    ret_l = [0] * 29\n",
+    "    ret_l = [0] * 31\n",
     "    for j in range(20): #เเต่ละหุ้น\n",
     "        dfo=all_ticker_list[j]\n",
-    "        for i in range(1,30): #เเต่ละ signal\n",
+    "        for i in range(1,32): #เเต่ละ signal\n",
     "            sl=(globals()['sl'+str(i)+all_stock_list[j]])\n",
     "            ret=0\n",
     "            sumall=0\n",
@@ -1082,22 +1103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "76f2f59a-b1a9-4f68-977c-279ad9f01f12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'obv_signal': 2031385.0656826817, 'rsiandmacd': 2045345.1997716979, 'stoch_signal_2': 2088779.0738481716, 'stoch_signal': 2155411.3303043516, 'rsi_signal': 2161608.0964771346, 'renko_signal': 2172033.6612821156, 'sar_signal': 2208969.8695727834, 'ma50_100_signal': 2220046.917265083, 'ma30_50_signal': 2279371.265065544, 'roc_signal': 2280059.1229876564, 'cci_signal': 2375001.8718760377, 'bb_signal': 2382830.2221719245, 'wpr_signal': 2384711.488575836, 'renko_macd_signal': 2392551.418287685, 'cdc_signal': 2422900.4409537236, 'psar_signal': 2430972.538909687, 'sma89_signal': 2485804.7845922317, 'aroon_signal': 2530886.3173183133, 'atr_signal': 2556103.2356253997, 'stoch_adx_signal': 2585410.202861084, 'bb_rsi_signal': 2587801.423863216, 'obv_renko_signal': 2607207.8748821453, 'macd_signal': 2620977.6675698464, 'sma100_signal': 2628346.050929764, 'ma30_100_signal': 2668900.6842874675, 'adx_signal': 2831550.868797722, 'obv_macd_signal': 2848659.2949439464, 'ma30_200_signal': 3202401.1535155177, 'ma50_200_signal': 3338723.9559470825}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulate_one_signal(all_ticker_list)\n",
     "def Convert(lst,j):\n",
-    "    res_dct = {j[i]:lst[i] for i in range(0,29)}\n",
+    "    res_dct = {j[i]:lst[i] for i in range(0,31)}\n",
     "    return res_dct\n",
     "\n",
     "sorted_footballers_by_goals = sorted(Convert(ret_l,dfo.columns).items(), key=lambda x:x[1])\n",
@@ -1108,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "id": "e9ee3ba0-141b-4b68-9b67-b147a04eb4bc",
    "metadata": {},
    "outputs": [],
@@ -1138,10 +1151,23 @@
     "def buyandhold(all_ticker_list):\n",
     "    global buyandhold_return_l\n",
     "    buyandhold_return_l=[]\n",
-    "    for j in range(16): #เเต่ละหุ้น\n",
+    "    for j in range(20): #เเต่ละหุ้น\n",
     "        dfo=all_ticker_list[j]\n",
     "        buyandhold_return_l.append(dfo['adj_close_price'][len(dfo)-1]-dfo['adj_close_price'][0])\n",
     "buyandhold(all_ticker_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b13a03d-577c-42d0-9268-67f8ef198170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signal_l=['atr_signal', 'stoch_signal_2', 'stoch_signal', 'cci_signal', 'rsi_signal', 'obv_signal', 'wpr_signal', 'bb_signal', 'sma100_signal', 'rsiandmacd', 'obv_renko_signal',\n",
+    "          'sma89_signal', 'ma30_100_signal', 'roc_signal', 'sar_signal', 'obv_macd_signal', 'stoch_adx_signal', 'psar_signal'\n",
+    "          , 'ma30_50_signal', 'cdc_signal', 'renko_signal', 'adx_signal', 'bb_rsi_signal' , 'macd_signal' , 'ma30_200_signal'\n",
+    "          , 'ma50_200_signal', 'ma50_100_signal', 'aroon_signal', 'renko_macd_signal']"
    ]
   },
   {
@@ -1153,12 +1179,22 @@
    "source": [
     "import pandas as pd\n",
     "rows=[]\n",
-    "for j in range(16):\n",
+    "for j in range(20):\n",
     "    rows.append(globals()['return_of_'+all_stock_list[j]+'_in_each_signal'])\n",
     "#rows.append(buyandhold_return_l)\n",
     "df = pd.DataFrame(rows, columns=signal_l)\n",
     "df['B&H']=buyandhold_return_l\n",
     "df['Stock']=all_stock_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d80766-928c-4f46-95e3-38370ed09633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -1173,18 +1209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "f94c3c9f-8498-4f69-80bb-27e26a893a8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_date = '2018-01-01'\n",
     "end_date = '2022-12-31'\n",
@@ -1194,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "id": "1bce5393-3714-431b-9ecb-897ffa2dfa8d",
    "metadata": {},
    "outputs": [],
@@ -1205,82 +1233,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "id": "3c05316e-36c4-414b-a9bb-d3c4b6b8253e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2018-1-2'"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Sdate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "id": "71dfde69-53c2-4c6b-b5af-02633b3b032c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Date\n",
-       "2018-01-02    0.136637\n",
-       "2018-01-03    0.206088\n",
-       "2018-01-04    0.273516\n",
-       "2018-01-05    0.315428\n",
-       "2018-01-08    0.355846\n",
-       "                ...   \n",
-       "2022-12-23    0.282352\n",
-       "2022-12-27    0.350154\n",
-       "2022-12-28    0.330923\n",
-       "2022-12-29    0.339714\n",
-       "2022-12-30    0.329912\n",
-       "Length: 1259, dtype: float64"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "real"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "id": "3e1159e2-8208-4874-9922-5e37b45a134d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "275"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "36958799-dd32-459e-be34-1a61e1a95483",
    "metadata": {},
    "outputs": [],
@@ -1315,7 +1298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "varInspector": {
    "cols": {
